--- a/src/main.styl
+++ b/src/main.styl
@@ -1,8 +1,8 @@
 :root 
-    font-family: 'Inter', system-ui, Avenir, Helvetica, Arial, sans-serif
+    font-family: 'Roboto', sans-serif
     font-weight: 500
-    line-height: 20px;
-    font-size: 15px
+    font-size: 13px;
+    line-height: 16px;
 
     text-rendering: optimizeLegibility
     -webkit-font-smoothing: antialiased
